Add unique constraints, @Transactional, and concurrent insert handling
- Add UNIQUE constraint on habit_categories.name to prevent duplicate
  category names at the database level
- Add composite UNIQUE constraint on habits(name, category_id, user_id)
  to prevent duplicate habits per user/category
- Add explicit @Column(name = "category_id") to Habit.categoryId for
  consistent column naming across Hibernate naming strategies
- Add @Transactional to DefaultDataController.initializeDefaults() so
  reads and writes occur in a single transaction
- Wrap category and habit saves in DefaultDataInitializer with
  try/catch to gracefully handle constraint violations from concurrent
  requests, reloading categories on conflict
- Replace Map.of() in DefaultDataController with Collections.singletonMap()

https://claude.ai/code/session_018NAVQPBx8Kho49PLYEzNzF